--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -141,3 +141,9 @@
     transform: translateY(-2000px);
   }
 }
+
+.compare-header {
+  font-family: 'Lobster', cursive;
+  font-size: 80px;
+  margin: 0 !important;
+}
